@@ -1,3 +1,12 @@
+2016-05-10  Pierre-Marie de Rodat  <derodat@adacore.com>
+
+	* dwarf2out.c (add_abstract_origin_attribute): Adjust
+	documentation comment.  For BLOCK nodes, add a
+	DW_AT_abstract_origin attribute that points to the DIE generated
+	for the origin BLOCK.
+	(gen_lexical_block_die): Call add_abstract_origin_attribute for
+	blocks from inlined functions.
+
 2016-05-10  Alan Modra  <amodra@gmail.com>
 
 	PR target/70947
